--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ChatGPTTS"
+        android:theme="@style/Theme.ChatGPT3"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_test_id"/> <!-- TODO replace AdMob test ID -->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
-            android:theme="@style/Theme.ChatGPTTS.NoActionBar">
+            android:theme="@style/Theme.ChatGPT3.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
