--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/admob_test_id"/> <!-- TODO replace AdMob test ID -->
+            android:value="@string/admob_app_id"/>
 
         <activity
             android:name=".MainActivity"
