make prompt/response content textviews copyable, double max prompt edittext length to 80 chars, don't send firebase log events while debugging, don't send crashlytics while debugging

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,11 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            ext.enableCrashlytics = false
+        }
+
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
