--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ android {
         applicationId "org.bitanon.chatgpt3"
         minSdk 24
         targetSdk 33
-        versionCode 24
-        versionName "1.23"
+        versionCode 25
+        versionName "1.24"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -75,6 +75,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'com.theokanning.openai-gpt3-java:client:0.8.1'
     implementation 'com.google.android.gms:play-services-ads:21.4.0'
+    implementation 'com.android.billingclient:billing:5.1.0'
     implementation 'com.android.billingclient:billing-ktx:5.1.0'
 
     // Import the BoM for the Firebase platform
