--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'com.theokanning.openai-gpt3-java:client:0.8.1'
@@ -79,6 +79,7 @@ dependencies {
     implementation 'com.android.billingclient:billing:5.1.0'
     implementation 'com.android.billingclient:billing-ktx:5.1.0'
 
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     // Add the dependencies for the Crashlytics and Analytics libraries
