--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,16 @@
                 android:value="" />
         </activity>
 
+        <activity
+            android:name=".FirebaseUIActivity"
+            android:exported="false"
+            android:label="@string/login"
+            android:parentActivityName=".SettingsActivity">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
     </application>
 
 </manifest>
