add links to app privacy policy, terms page, add firebase event logs for app pp/terms links, and login/logout buttons, remove extraneous alertdialog layout, finish renaming TermsActivity stuff, add scrollview to terms layout, organize string res

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity
             android:name=".TermsActivity"
             android:exported="false"
-            android:label="@string/title_activity_settings"
+            android:label="@string/terms"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.app.lib_name"
