upon auth success, read user from firestore, if no user found, set new user to firestore, otherwise update last login time

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
         </activity>
 
         <activity
-            android:name=".FirebaseUIActivity"
+            android:name=".FirebaseAuthActivity"
             android:exported="false"
             android:label="@string/login"
             android:parentActivityName=".AccountActivity">
