--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'com.theokanning.openai-gpt3-java:client:0.8.1'
     implementation 'com.google.android.gms:play-services-ads:21.4.0'
-    implementation 'com.android.billingclient:billing:5.1.0'
+    //implementation 'com.android.billingclient:billing:5.1.0'
     implementation 'com.android.billingclient:billing-ktx:5.1.0'
 
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
