--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- TTS for Android 11 -->
     <queries>
         <intent>
+            <!-- TTS for Android 11 -->
             <action android:name="android.intent.action.TTS_SERVICE" />
         </intent>
+<!--        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="lightning" />
+        </intent>-->
     </queries>
 
     <application
