add automatic ln payment button, get encoded lnurl info from getalby.com, add manual ln transaction to bottom of UpgradeActiv, add manual ln payment custom analytic event, rename some strings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
             <!-- TTS for Android 11 -->
             <action android:name="android.intent.action.TTS_SERVICE" />
         </intent>
-<!--        <intent>
+        <intent>
             <action android:name="android.intent.action.VIEW" />
             <data android:scheme="lightning" />
-        </intent>-->
+        </intent>
     </queries>
 
     <application
