--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ android {
         applicationId "org.bitanon.chatgpt3"
         minSdk 24
         targetSdk 33
-        versionCode 44
-        versionName "1.43"
+        versionCode 45
+        versionName "1.44"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -87,5 +87,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+    implementation 'ru.gildor.coroutines:kotlin-coroutines-okhttp:1.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
 }
